kubernetes/ingress/nginx-deployment.yaml
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: nginx-demo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo

  template:
    metadata:
      labels:
        app: nginx-demo

    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
