kubernetes/ingress/nginx-service.yaml
---
apiVersion: v1

kind: Service

metadata:
  name: nginx-service

spec:
  selector:
    app: nginx-demo

  ports:
    - port: 80
      targetPort: 80
