kubernetes/ingress/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: host-ingress

spec:
  ingressClassName: traefik

  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: nginx-service
                port:
                  number: 80
